--- a/src/app.html
+++ b/src/app.html
@@ -7,8 +7,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta property="og:site_name" content="CasaTrade" />
 		<meta property="og:type" content="website" />
-		<meta property="og:site_name" content="casatrade.info" />
-		<meta property="og:url" content="https://casatrade.info" />
+		<meta property="og:site_name" content="casatrade.website" />
+		<meta property="og:url" content="https://casatrade.website" />
 
 		%sveltekit.head%
 	</head>
